fixed broken TimeFormatted equals check; added surefire plugin to run gui tests with testfx